tests/field/get_on_nil.out
[31merror[error]: 'NoneType' object has no attribute 'bar'
----- Traceback -----
  ┌─ <unknown>:1:8
  | 
1 | None.bar
  |         ^
[0m